# ResizableRectangle

./: CMakeLists.txt  LICENSE  gui.cpp
resources/: attributions.csv
